deploy/k8s/gateway/gateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-pod
  template:
    metadata:
      labels:
        app: gateway-pod
    spec:
      containers:
        - name: gateway
          image: maeljamin/ton-yugi-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ping
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  name: gateway-svc
  labels:
    app: gateway-svc
spec:
  type: NodePort
  selector:
    app: gateway-pod # which pods will receive the traffic
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
      kubernetes.io/ingress.class: "gce"
      kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway-svc
            port:
              number: 8000
